--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "firebase": "^11.8.1",
+    "firebase-admin": "^13.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
